--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.553.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
-    "idb": "https://esm.run/idb@8.0.0"
+    "idb": "https://esm.run/idb@8.0.0",
+    "peerjs": "https://esm.run/peerjs@1.5.4",
+    "qrcode": "https://esm.run/qrcode@1.5.3"
   }
 }
 </script>
